--- a/colonia-gatos/pom.xml
+++ b/colonia-gatos/pom.xml
@@ -33,6 +33,19 @@
             <version>9.5.0</version>
         </dependency>
         
+        <!-- para los códigos QR-->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+        
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
