Soluciona errores con historial medico y aptitud para adoptar

--- a/colonia-gatos/pom.xml
+++ b/colonia-gatos/pom.xml
@@ -12,6 +12,13 @@
             <version>RELEASE260</version>
         </dependency>
         
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.4</version>
+        </dependency>
+
+        
         <!-- API de JPA (Jakarta Persistence) -->
         <dependency>
             <groupId>jakarta.persistence</groupId>
