--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /colonia-gatos/target/
+# Ignorar la carpeta de entrega
+Entrega TPI Final Programacion Avanzada 2 - Mango Agustin 67926/
+
+# Ignorar el archivo comprimido
+Entrega TPI Final Programacion Avanzada 2 - Mango Agustin 67926.zip
